--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -465,7 +465,7 @@ Example:
 *Q*: How many times can I use the Undo command sequentially? +
 *A*: The Undo command can be used to undo all deck alterations for this session. However, if you quit out of the app and reopen it, you will erase your history of Undos!
 
-*Q*: If I use Undo and make changes to an old version of a deck. Will redo recover my original deck before the Undo command? +
+*Q*: If I use Undo and make changes to an old version of a deck, will redo recover my original deck before the Undo command? +
 *A*: Unfortunately, the original deck before the Undo is unrecoverable. As such, please be mindful of making any changes to a recovered deck as this will erase any version of decks before the Undo!
 
 // end::FAQ[]
@@ -483,8 +483,8 @@ e.g. `view deck/science_deck`
 * *create* : `create deck/DECK_NAME`
 * *add* - only applicable for Front-Back Cards and Multiple Choice Cards
 ====
-FrontBack: `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]`
-MCQ: `add deck/DECK_NAME front/CARD_FRONT back/INDEX_OF_CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
+** FrontBack: `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]` +
+** MCQ: `add deck/DECK_NAME front/CARD_FRONT back/INDEX_OF_CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
 ====
 * *edit*: `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]`
 - only applicable for Front-Back Cards and Multiple Choice Cards
@@ -495,15 +495,15 @@ e.g. `edit deck/science_deck action/edit index/1 front/what is a cell back/a cel
 e.g. `test deck/science_deck duration/0` +
 e.g. `test deck/science_deck duration/100`
 ====
-While in TEST_MODE:
-** *next card*: `next`
-** *previous card*: `prev`
-** *exit test mode*: `exit`
-** *Front Back Cards:*
-*** see back of card: `back`
-*** correct answer: `correct`
-*** wrong answer: `wrong`
-*** see question: `front`
+** While in TEST_MODE:
+*** *next card*: `next`
+*** *previous card*: `prev`
+*** *exit test mode*: `exit`
+*** *Front Back Cards:*
+**** see back of card: `back`
+**** correct answer: `correct`
+**** wrong answer: `wrong`
+**** see question: `front`
 ** *Multiple Choice Cards:*
 *** indicate choice: `<USER_INPUT>` which is any integer
 *** see question: `front`
