--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -483,8 +483,8 @@ e.g. `view deck/science_deck`
 * *create* : `create deck/DECK_NAME`
 * *add* - only applicable for Front-Back Cards and Multiple Choice Cards
 ====
-** FrontBack: `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]` +
-** MCQ: `add deck/DECK_NAME front/CARD_FRONT back/INDEX_OF_CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
+** *add FrontBack:* `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]` +
+** *add MCQ:* `add deck/DECK_NAME front/CARD_FRONT back/INDEX_OF_CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
 ====
 * *edit*: `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]`
 - only applicable for Front-Back Cards and Multiple Choice Cards
@@ -495,19 +495,19 @@ e.g. `edit deck/science_deck action/edit index/1 front/what is a cell back/a cel
 e.g. `test deck/science_deck duration/0` +
 e.g. `test deck/science_deck duration/100`
 ====
-** While in TEST_MODE:
+** *While in TEST_MODE:*
 *** *next card*: `next`
 *** *previous card*: `prev`
 *** *exit test mode*: `exit`
-*** *Front Back Cards:*
+** *TEST_MODE: Front Back Cards:*
 **** see back of card: `back`
 **** correct answer: `correct`
 **** wrong answer: `wrong`
 **** see question: `front`
-** *Multiple Choice Cards:*
+** *TEST_MODE: Multiple Choice Cards:*
 *** indicate choice: `<USER_INPUT>` which is any integer
 *** see question: `front`
-** *Java/Javascript Cards:*
+** *TEST_MODE: Java/Javascript Cards:*
 *** open coding playground: `code`
 ====
 * *stats* : `stats [deck/DECK_NAME]` +
